Fixes #13218 Removed z-index:-1 from mblHeadingDivTitle.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@25489 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/blackberry/Heading.css
+++ b/mobile/themes/blackberry/Heading.css
@@ -24,7 +24,6 @@
   position: absolute;
   width: 100%;
   display: none;
-  z-index: -1;
   left: 0px;
 }
 .mblHeadingCenterTitle .mblHeadingDivTitle {
